--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "watch": "pnpm build --watch",
         "dev": "pnpm watch",
         "watchWeb": "pnpm buildWeb --watch",
+        "generateDevsList": "tsx scripts/generateDevsList.ts",
         "generatePluginJson": "tsx scripts/generatePluginList.ts",
         "generateTypes": "tspc --emitDeclarationOnly --declaration --outDir packages/vencord-types --allowJs false",
         "inject": "node scripts/runInstaller.mjs -- --install",
