--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
               run: pnpm install --frozen-lockfile
 
             - name: Lint & Test if desktop version compiles
-              run: pnpm buildStandalone && pnpm lint && pnpm lint-styles && pnpm generatePluginJson
+              run: pnpm buildStandalone && pnpm lint:fix && pnpm lint-styles && pnpm generatePluginJson
 
             - name: Test if web version compiles
               run: pnpm buildWeb
