Enhance ESLint configuration and TypeScript settings
- Updated ESLint configuration to ignore additional plugin files.
- Refined TypeScript configuration for improved path handling and included necessary files.
- Made minor code style adjustments across various plugins for consistency.
- Added keys to mapped components in React to prevent potential rendering issues.
- Improved CSS styles for better layout and visual consistency.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,11 +30,10 @@
             "@webpack/common": ["./webpack/common"],
             "@webpack": ["./webpack/webpack"],
             "@webpack/patcher": ["./webpack/patchWebpack"],
-            "@webpack/wreq.d": ["./webpack/wreq.d"],
+            "@webpack/wreq.d": ["./webpack/wreq.d"]
         },
 
         "plugins": [
-            // Transform paths in output .d.ts files (Include this line if you output declarations files)
             {
                 "transform": "typescript-transform-paths",
                 "afterDeclarations": true
@@ -42,5 +41,5 @@
         ],
         "outDir": "who-fucking-cares-dude"
     },
-    "include": ["src/**/*", "browser/**/*", "scripts/**/*", "eslint.config.mjs"],
+    "include": ["src/**/*", "browser/**/*", "scripts/**/*", "eslint.config.mjs"]
 }
