--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
         "@intrnl/xxhash64": "^0.1.2",
         "@vap/core": "0.0.12",
         "@vap/shiki": "0.10.5",
+        "buttplug": "^3.0.0",
         "fflate": "^0.8.2",
         "gifenc": "github:mattdesl/gifenc#64842fca317b112a8590f8fef2bf3825da8f6fe3",
         "idb": "8.0.3",
         "jsqr": "1.4.0",
         "monaco-editor": "^0.52.2",
         "nanoid": "^5.1.5",
+        "openai": "^4.0.0",
         "virtual-merge": "^1.0.1"
     },
     "devDependencies": {
