--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "monaco-editor": "^0.52.2",
         "nanoid": "^5.1.5",
         "openai": "^4.0.0",
+        "socket.io": "^4.8.1",
         "virtual-merge": "^1.0.1"
     },
     "devDependencies": {
@@ -90,7 +91,7 @@
         "typescript-transform-paths": "^3.5.5",
         "zip-local": "^0.3.5"
     },
-    "packageManager": "pnpm@10.4.1",
+    "packageManager": "pnpm@10.18.3",
     "pnpm": {
         "patchedDependencies": {
             "eslint@9.20.1": "patches/eslint@9.20.1.patch",
